--- a/form/05-styles.css
+++ b/form/05-styles.css
@@ -886,12 +886,12 @@ textarea:focus {
 ============================= */
 
 .form-group .form-help {
-  margin: 0px;
+  margin: 0;
   line-height: 1.3;
   letter-spacing: 0.019rem;
   color: var(--color-dark-grey);
   font-size: var(--font-size-small);
-  max-height: 0px;
+  max-height: 0;
   transition: 0.3s;
   overflow: hidden;
 }
